--- a/package.json
+++ b/package.json
@@ -1,14 +1,33 @@
 {
   "name": "netflix-clone",
-  "version": "0.1.0",
+  "description": "Built a netflix clone using ReactJS and TailwindCSS",
+  "homepage": "https://milindgoel15.github.io/netflix-clone",
+  "version": "1.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/milindgoel15/netflix-clone.git"
+  },
+  "keywords": [
+    "Milind Goel, Web Developer, MilindGoel15, milindgoel15.github.io, netflix clone"
+  ],
+  "author": {
+    "name": "Milind Goel",
+    "email": "milindgoel15@gmail.com",
+    "url": "https://github.com/milindgoel15"
+  },
+  "license": "AGPL",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.51.0",
+    "tailwindcss": "^3.0.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
